add payload to custom event

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="overview">
         <div class="main">
             <movie-list></movie-list>
-            <movie-filter></movie-filter>
+            <movie-filter @check-filter=""></movie-filter>
         </div>
     </div>
 </div>
